--- a/MiniCpp/MiniCpp.vcxproj
+++ b/MiniCpp/MiniCpp.vcxproj
@@ -153,6 +153,10 @@
   <ItemGroup>
     <ClInclude Include="mccommon.h" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="..\little c解释器分析[一].txt" />
+    <Text Include="..\little c解释器分析[二].txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
